--- a/MyYouthFutures/Views/Links/Index.cshtml
+++ b/MyYouthFutures/Views/Links/Index.cshtml
@@ -3,15 +3,15 @@
 @{
     ViewData["Title"] = "Index";
 }
+<div class="sidepage index">
+    <h2>Index</h2>
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Image)
                 </th>
@@ -21,27 +21,29 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Message)
                 </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Message)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.LinkID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LinkID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LinkID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Image)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Message)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.LinkID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.LinkID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.LinkID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
