--- a/MyYouthFutures/Views/CalendarEvent/Details.cshtml
+++ b/MyYouthFutures/Views/CalendarEvent/Details.cshtml
@@ -1,39 +1,40 @@
 ﻿@model MyYouthFutures.Models.CalendarEvent
-
-<div>
-    <h4>CalendarEvent</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-        <dt>
-            @Html.DisplayNameFor(model => model.eventTitle)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.eventTitle)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.datetime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.datetime)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.location)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.location)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.info)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.info)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="sidepage details">
+    <div>
+        <h4>CalendarEvent</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.name)
+            </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.eventTitle)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.eventTitle)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.datetime)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.datetime)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.location)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.location)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.info)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.info)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
