--- a/MyYouthFutures/Views/Doners/Index.cshtml
+++ b/MyYouthFutures/Views/Doners/Index.cshtml
@@ -4,14 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<div class="sidepage index">
+    <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Doner_Type)
                 </th>
@@ -21,27 +22,29 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Doner_year)
                 </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Doner_Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Doner_Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Doner_year)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Doner_Type)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Doner_Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Doner_year)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
