--- a/MyYouthFutures/Views/Help_Panel/Edit.cshtml
+++ b/MyYouthFutures/Views/Help_Panel/Edit.cshtml
@@ -3,37 +3,38 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="sidepage edit">
+    <h2>Edit</h2>
 
-<h2>Edit</h2>
-
-<h4>Help_Panel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
-            <div class="form-group">
-                <label asp-for="Content_Type" class="control-label"></label>
-                <input asp-for="Content_Type" class="form-control" />
-                <span asp-validation-for="Content_Type" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Content_Text" class="control-label"></label>
-                <input asp-for="Content_Text" class="form-control" />
-                <span asp-validation-for="Content_Text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+    <h4>Help_Panel</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ID" />
+                <div class="form-group">
+                    <label asp-for="Content_Type" class="control-label"></label>
+                    <input asp-for="Content_Type" class="form-control" />
+                    <span asp-validation-for="Content_Type" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Content_Text" class="control-label"></label>
+                    <input asp-for="Content_Text" class="form-control" />
+                    <span asp-validation-for="Content_Text" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+</div>
