--- a/MyYouthFutures/Views/List_Item/Create.cshtml
+++ b/MyYouthFutures/Views/List_Item/Create.cshtml
@@ -3,36 +3,37 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="sidepage create">
+    <h2>Create</h2>
 
-<h2>Create</h2>
-
-<h4>List_Item</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TypeOfList" class="control-label"></label>
-                <input asp-for="TypeOfList" class="form-control" />
-                <span asp-validation-for="TypeOfList" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LiText" class="control-label"></label>
-                <input asp-for="LiText" class="form-control" />
-                <span asp-validation-for="LiText" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+    <h4>List_Item</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="TypeOfList" class="control-label"></label>
+                    <input asp-for="TypeOfList" class="form-control" />
+                    <span asp-validation-for="TypeOfList" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LiText" class="control-label"></label>
+                    <input asp-for="LiText" class="form-control" />
+                    <span asp-validation-for="LiText" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+</div>
