--- a/MyYouthFutures/Views/List_Item/Edit.cshtml
+++ b/MyYouthFutures/Views/List_Item/Edit.cshtml
@@ -3,35 +3,36 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="sidepage edit">
+    <h2>Street Outreach</h2>
 
-<h2>Street Outreach</h2>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
-            @*<div class="form-group">
-                <label asp-for="TypeOfList" class="control-label"></label>
-                <input asp-for="TypeOfList" class="form-control" />
-                <span asp-validation-for="TypeOfList" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="LiText" class="control-label"></label>
-                <input asp-for="LiText" class="form-control" />
-                <span asp-validation-for="LiText" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ID" />
+                @*<div class="form-group">
+                        <label asp-for="TypeOfList" class="control-label"></label>
+                        <input asp-for="TypeOfList" class="form-control" />
+                        <span asp-validation-for="TypeOfList" class="text-danger"></span>
+                    </div>*@
+                <div class="form-group">
+                    <label asp-for="LiText" class="control-label"></label>
+                    <input asp-for="LiText" class="form-control" />
+                    <span asp-validation-for="LiText" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+</div>
