--- a/MyYouthFutures/Views/Media/Delete.cshtml
+++ b/MyYouthFutures/Views/Media/Delete.cshtml
@@ -3,32 +3,33 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="sidepage delete">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Media</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Text_Type)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Text_Type)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Content_Text)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Content_Text)
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Media</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Text_Type)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Text_Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Content_Text)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Content_Text)
+            </dd>
+        </dl>
 
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ID" />
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <a asp-action="Index">Back to List</a>
+        </form>
+    </div>
 </div>
