--- a/MyYouthFutures/Views/Services_Message/Details.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Details.cshtml
@@ -3,34 +3,35 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="sidepage details">
+    <h2>Details</h2>
 
-<h2>Details</h2>
-
-<div>
-    <h4>Services_Message</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.MessageImage)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MessageImage)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.MessageHeader)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MessageHeader)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Message)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Message)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>Services_Message</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.MessageImage)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MessageImage)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.MessageHeader)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MessageHeader)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Message)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Message)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
