--- a/MyYouthFutures/Views/Services_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Edit.cshtml
@@ -3,40 +3,41 @@
     ViewData["Title"] = "Edit";
     
 }
+<div class="sidepage edit">
+    <h2>Services</h2>
 
-<h2>Services</h2>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
-            <div class="form-group">
-                <label asp-for="MessageImage" class="control-label"></label>
-                <input asp-for="MessageImage" class="form-control" />
-                <span asp-validation-for="MessageImage" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MessageHeader" class="control-label"></label>
-                <input asp-for="MessageHeader" class="form-control" />
-                <span asp-validation-for="MessageHeader" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Message" class="control-label"></label>
-                @Html.EditorFor(x =>x.Message)
-                <span asp-validation-for="Message" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="ID" />
+                <div class="form-group">
+                    <label asp-for="MessageImage" class="control-label"></label>
+                    <input asp-for="MessageImage" class="form-control" />
+                    <span asp-validation-for="MessageImage" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MessageHeader" class="control-label"></label>
+                    <input asp-for="MessageHeader" class="form-control" />
+                    <span asp-validation-for="MessageHeader" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Message" class="control-label"></label>
+                    @Html.EditorFor(x => x.Message)
+                    <span asp-validation-for="Message" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+</div>
