--- a/MyYouthFutures/Views/Staff_Panel/Details.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Details.cshtml
@@ -3,52 +3,53 @@
 @{
     ViewData["Title"] = "Details";
 }
+<div class="sidepage details">
+    <h2>Details</h2>
 
-<h2>Details</h2>
-
-<div>
-    <h4>Staff_Panel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Staff_Image)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Staff_Image)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Level)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Postion)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Postion)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Director)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Director)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>Staff_Panel</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Staff_Image)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Staff_Image)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Level)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Level)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Postion)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Postion)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.email)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.email)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Director)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Director)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
