added angular app

--- a/MyYouthFutures/Views/Services_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Edit.cshtml
@@ -1,8 +1,15 @@
 ﻿@model MyYouthFutures.Models.Services_Message
 @{
     ViewData["Title"] = "Edit";
-    
+    <script src="~/clientapp/dist/inline.bundle.js"></script>
+    <script src="~/clientapp/dist/polyfills.bundle.js"></script>
+    <script src="~/clientapp/dist/styles.bundle.js"></script>
+    <script src="~/clientapp/dist/vendor.bundle.js"></script>
+    <script src="~/clientapp/dist/main.bundle.js"></script>
 }
+
+<app-root></app-root>
+
 
 <h2>Services</h2>
 
