--- a/MyYouthFutures/Views/CalendarEvent/Edit.cshtml
+++ b/MyYouthFutures/Views/CalendarEvent/Edit.cshtml
@@ -2,8 +2,8 @@
 <div class="sidepage edit">
     <h4>CalendarEvent</h4>
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="id" />
@@ -33,13 +33,14 @@
                     <span asp-validation-for="info" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
+        <a asp-controller="Home" asp-action="About" asp-action="Calendar" class="btn btn-default">Back to Page</a>
     </div>
 </div>
