--- a/MyYouthFutures/Views/HomeTitles/Edit.cshtml
+++ b/MyYouthFutures/Views/HomeTitles/Edit.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Edit";
 }
 <div class="sidepage edit">
-    <h2>Edit</h2>
-
-    <h4>HomeTitle</h4>
+    <h3>Edit</h3>
+    <h4>Home Title</h4>
     <hr />
-    <div class="row">
+    <div class="row sidepage-content">
         <div class="col-xs-12">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -34,14 +33,15 @@
                     <span asp-validation-for="SubheaderContent" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
+        <a asp-controller="Home" asp-action="Index" class="btn btn-default">Back to Page</a>
     </div>
 
     @section Scripts {
