--- a/MyYouthFutures/Views/Services_Message/Edit.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Edit.cshtml
@@ -4,10 +4,11 @@
     
 }
 <div class="sidepage edit">
-    <h2>Services</h2>
-
-    <div class="row">
-        <div class="col-md-4">
+    <h3>Edit</h3>
+    <h4>Service</h4>
+    <hr />
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ID" />
@@ -23,18 +24,19 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Message" class="control-label"></label>
-                    @Html.EditorFor(x => x.Message)
+                    <textarea asp-for="Message" class="form-control"></textarea>
                     <span asp-validation-for="Message" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
+        <a asp-controller="Home" asp-action="Index" class="btn btn-default">Back to Page</a>
     </div>
 
     @section Scripts {
