--- a/MyYouthFutures/Views/Staff_Panel/Edit.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 <div class="sidepage edit">
-    <h2>Edit</h2>
-
-    <h4>Staff_Panel</h4>
+    <h3>Edit</h3>
+    <h4>Staff Panel</h4>
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row sidepage-content">
+        <div class="col-xs-12">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ID" />
@@ -44,14 +43,15 @@
                     <span asp-validation-for="Director" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Save" class="btn btn-success" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default">Back to List</a>
+        <a asp-controller="Home" asp-action="About" asp-fragment="Staff" class="btn btn-default">Back to Page</a>
     </div>
 
     @section Scripts {
