added in attributes to Service messages model so that it now lists the target controller, action, and fragment for the links

--- a/MyYouthFutures/Views/Shared/PartialViews/_History.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_History.cshtml
@@ -1,6 +1,6 @@
 ﻿@* ------ YF HISTORY ------ *@
 <edit-container>
-    <div class="container-fluid">
+    <div class="container-fluid" id="history">
         <div class="row history_text">
             <section class="col-xs-12">
                 @foreach (introArticle ia in Model.introArticles)
