fixed events view

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -22,6 +22,7 @@
 @Html.Partial("PartialViews/_Staff")
 @Html.Partial("PartialViews/_Media")
 @Html.Partial("PartialViews/_Donors")
+@Html.Partial("PartialViews/_Events")
 @Html.Partial("PartialViews/_HelpPanel")
 @Html.Partial("PartialViews/_ListOfNeeds")
 
