--- a/MyYouthFutures/Views/Shared/PartialViews/_Purposes.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Purposes.cshtml
@@ -84,7 +84,7 @@
                             </section>
                             <section class="panel-footer">
                                 <p class="quicksand-light-24-green">
-                                    <a href="#">@Lk.Hyperlink ></a>
+                                    <a <a asp-controller="@Lk.TargetControler" asp-action="@Lk.TargetAction" asp-fragment="@Lk.TargetFragment">>@Lk.Hyperlink ></a>
                                 </p>
                             </section>
                         </article>
