--- a/MyYouthFutures/Views/Founder_Message/Details.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Details.cshtml
@@ -7,9 +7,10 @@
     <h2>Details</h2>
 
     <div>
-        <h4>Founder_Message</h4>
+        <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-edit"></span>Edit</a>
+        <h4>Founder Image</h4> <!--Founder_message-->
         <hr />
-        <dl class="dl-horizontal">
+        <dl class="dl-horizontal sidepage-content">
             <dt>
                 @Html.DisplayNameFor(model => model.founderImage)
             </dt>
@@ -24,8 +25,8 @@
             </dd>
         </dl>
     </div>
+    <hr />
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 </div>
