--- a/MyYouthFutures/Views/Links/Details.cshtml
+++ b/MyYouthFutures/Views/Links/Details.cshtml
@@ -7,9 +7,10 @@
     <h2>Details</h2>
 
     <div>
-        <h4>Link</h4>
+        <a asp-action="Edit" asp-route-id="@Model.LinkID" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-edit"></span>Edit</a>
+        <h4>Links Panel: Link @Model.LinkID</h4>
         <hr />
-        <dl class="dl-horizontal">
+        <dl class="dl-horizontal sidepage-content">
             <dt>
                 @Html.DisplayNameFor(model => model.Image)
             </dt>
@@ -30,8 +31,8 @@
             </dd>
         </dl>
     </div>
+    <hr />
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.LinkID">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
 </div>
