Made 'Calendar' section look better

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                             <ul class="dropdown-menu">
                                 <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donate">Donate</a></li>
 
-                                <li><a asp-area="" asp-controller="Home" asp-action="Index">Events</a></li>
+                                <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Calendar">Events</a></li>
                                 <li><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donor">Donor Recognition</a></li>
                             </ul>
                         </li>
