--- a/MyYouthFutures/Views/Events/Index.cshtml
+++ b/MyYouthFutures/Views/Events/Index.cshtml
@@ -62,6 +62,6 @@
         </table>
     </div>
     <hr />
-    <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
+    <a asp-controller="Home" asp-action="About" asp-fragment="Calendar" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
 
 </div>
