Email for Contact form

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -166,11 +166,11 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="~/js/secondaryScripts.js"></script>
         <script src="~/js/gen_validatorv31.js" asp-append-version="true"></script>
-        <script src="~/js/login.js" asp-append-version="true"></script>
+       <!--<script src="~/js/login.js" asp-append-version="true"></script>--> 
 
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/js/app.js"></script>
-        <script src="~/js/editController.js"></script>
+        <!--<script src="~/js/editController.js"></script>-->
         <script src="~/lib/angular-content-editable/dist/angular-content-editable.js"></script>
         
         
