--- a/MyYouthFutures/Views/Shared/PartialViews/_Contact.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Contact.cshtml
@@ -9,18 +9,18 @@
     <div class="row">
         <div class="col-xs-12 col-md-6 contact_form">
             <p class="contact_subheader">CONTACT US</p>
-            <form method="post" name="myemailform" action="form-to-email.php">
+            <form method="post" name="myemailform" action="/Home/About">
                 <input type="text" class="input_text" name="firstName" placeholder="First Name" maxlength="20"> <span class="change" id="fName_change">Required!</span>
                 <br>
                 <input type="text" class="input_text" name="lastName" placeholder="Last Name" maxlength="20"><span class="change" id="lName_change">Required!</span>
                 <br>
                 <input type="tel" name="phone" placeholder="Telephone (Optional)" maxlength="20">
                 <br>
-                <input type="email" class="input_text" name="email" placeholder="Email Address" maxlength="40"><span class="change" id="email_change">Required!</span>
+                <input type="email" class="input_text" name="EmailAddress" placeholder="Email Address" maxlength="40"><span class="change" id="email_change">Required!</span>
                 <br>
                 <textarea name="message" class="input_text" placeholder="Message" maxlength="255"></textarea><span class="change" id="message_change">Required!</span>
                 <br>
-                <input type="submit" class="submit_button" id="submit" value="Submit" disabled>
+                <input type="submit" class="submit_button" id="submit" value="Submit">
                 <input type="reset" value="Cancel" class="cancel" />
             </form>
         </div>
