Changed wording; fixed links

--- a/MyYouthFutures/Views/Doners/Edit.cshtml
+++ b/MyYouthFutures/Views/Doners/Edit.cshtml
@@ -39,7 +39,7 @@
         <a asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to List</a>
     </div>
     <div>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page</a>
+        <a asp-controller="Home" asp-action="About" asp-fragment="donorsMain" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page</a>
     </div>
 
     @section Scripts {
