--- a/MyYouthFutures/Views/FirstYear_Service_Messages/Create.cshtml
+++ b/MyYouthFutures/Views/FirstYear_Service_Messages/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>First-Year Service Messages</h4>
+    <h4>History: New First-Year Panel</h4>
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
