--- a/MyYouthFutures/Views/Founder_Message/Create.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>Founder Images</h4> <!--Founder Message-->
+    <h4>History: New Image</h4> <!--Founder Message-->
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
