--- a/MyYouthFutures/Views/HomeTitles/Edit.cshtml
+++ b/MyYouthFutures/Views/HomeTitles/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="sidepage edit">
     <h2>Edit</h2>
-    <h4>Home: Title</h4>
+    <h4>Home Title</h4>
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
