--- a/MyYouthFutures/Views/Links/Delete.cshtml
+++ b/MyYouthFutures/Views/Links/Delete.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage delete">
     <h2>Delete</h2>
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Link</h4>
+    <h4>Links: Panel #@Model.LinkID</h4>
     <hr />
 
     <div class="sidepage-content">
