--- a/MyYouthFutures/Views/List_Item/Index.cshtml
+++ b/MyYouthFutures/Views/List_Item/Index.cshtml
@@ -44,6 +44,6 @@
         </table>
     </div>
     <hr />
-    <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
+    <a asp-controller="Home" asp-action="About" asp-fragment="needs" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
 
 </div>
