--- a/MyYouthFutures/Views/Media/Create.cshtml
+++ b/MyYouthFutures/Views/Media/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>Media</h4>
+    <h4>Media: New Content</h4>
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
