--- a/MyYouthFutures/Views/Media/Details.cshtml
+++ b/MyYouthFutures/Views/Media/Details.cshtml
@@ -8,8 +8,7 @@
 
     <div>
         <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-edit"></span>Edit</a>
-        @*<h4>Media: Article @Model.ID</h4>*@
-        <h4>Media@*: @Model.Text_Type*@</h4>
+        <h4>Media: Content #@Model.ID</h4>
         <hr />
         <dl class="dl-horizontal sidepage-content">
             <dt>
