--- a/MyYouthFutures/Views/Services/Index.cshtml
+++ b/MyYouthFutures/Views/Services/Index.cshtml
@@ -7,7 +7,7 @@
     <h2>Index</h2>
 
     <a asp-action="Create" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-plus"></span>Create New</a>
-    <h4>Services: Header</h4>
+    <h4>Services Header</h4>
     <hr />
 
     <div class="sidepage-content">
