--- a/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.EntityFrameworkCore
-<div class="container-fluid needs">
+<div class="container-fluid needs" id="needs">
     <div class="row donate_help">
         <div class="col-xs-12">
             <p>LIST OF NEEDS</p>
