--- a/MyYouthFutures/Views/introArticles/Create.cshtml
+++ b/MyYouthFutures/Views/introArticles/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>Introduction Article</h4> <!--IntroArticles-->
+    <h4>History: New Paragraph</h4> <!--IntroArticles-->
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
