--- a/MyYouthFutures/Views/Doners/Delete.cshtml
+++ b/MyYouthFutures/Views/Doners/Delete.cshtml
@@ -7,7 +7,7 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Doners</h4>
+    <h4>Doners: Donor #@Model.ID</h4>
     <hr />
     <div class="sidepage-content">    
         <dl class="dl-horizontal">
