--- a/MyYouthFutures/Views/Events/Create.cshtml
+++ b/MyYouthFutures/Views/Events/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>Events</h4>
+    <h4>Events: New Event</h4>
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
