--- a/MyYouthFutures/Views/FirstYear_Service_Messages/Delete.cshtml
+++ b/MyYouthFutures/Views/FirstYear_Service_Messages/Delete.cshtml
@@ -7,7 +7,7 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>FirstYear Service Messages</h4>
+    <h4>History: First Year Panel #@Model.ID</h4>
     <hr />
     <div class="sidepage-content">
         <dl class="dl-horizontal">
