--- a/MyYouthFutures/Views/FirstYear_Service_Messages/Index.cshtml
+++ b/MyYouthFutures/Views/FirstYear_Service_Messages/Index.cshtml
@@ -44,6 +44,6 @@
     </div>
 
     <hr />
-    <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
+    <a asp-controller="Home" asp-action="About" asp-fragment="firstYear" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
 
 </div>
