--- a/MyYouthFutures/Views/Founder_Message/Details.cshtml
+++ b/MyYouthFutures/Views/Founder_Message/Details.cshtml
@@ -8,7 +8,7 @@
 
     <div>
         <a asp-action="Edit" asp-route-id="@Model.ID" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-edit"></span>Edit</a>
-        <h4>Founder Image</h4> <!--Founder_message-->
+        <h4>History: Image #@Model.ID</h4> <!--Founder_message-->
         <hr />
         <dl class="dl-horizontal sidepage-content">
             <dt>
