--- a/MyYouthFutures/Views/Help_Panel/Create.cshtml
+++ b/MyYouthFutures/Views/Help_Panel/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>Help Panel</h4>
+    <h4>Donate: New Section</h4>
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
