--- a/MyYouthFutures/Views/Help_Panel/Delete.cshtml
+++ b/MyYouthFutures/Views/Help_Panel/Delete.cshtml
@@ -7,7 +7,7 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Help Panel</h4>
+    <h4>Donate: Section #@Model.ID</h4>
     <hr />
     <div class="sidepage-content">
         <dl class="dl-horizontal">
