--- a/MyYouthFutures/Views/Help_Panel/Index.cshtml
+++ b/MyYouthFutures/Views/Help_Panel/Index.cshtml
@@ -7,7 +7,7 @@
     <h2>Index</h2>
 
     <a asp-action="Create" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-plus"></span>Create New</a>
-    <h4>Donate: Panels</h4>
+    <h4>Donate: Sections</h4>
     <hr />
     <div class="sidepage-content">
         <table class="table">
@@ -44,6 +44,6 @@
     </div>
 
     <hr />
-    <a asp-controller="Home" asp-action="Index" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
+    <a asp-controller="Home" asp-action="About" asp-fragment="Donate" class="btn btn-default back"><span class="glyphicon glyphicon-triangle-left"></span>Back to Page </a>
 
 </div>
