--- a/MyYouthFutures/Views/Links/Details.cshtml
+++ b/MyYouthFutures/Views/Links/Details.cshtml
@@ -8,7 +8,7 @@
 
     <div>
         <a asp-action="Edit" asp-route-id="@Model.LinkID" class="btn btn-primary btn-right"><span class="glyphicon glyphicon-edit"></span>Edit</a>
-        <h4>Links Panel: Link @Model.LinkID</h4>
+        <h4>Links: Panel #@Model.LinkID</h4>
         <hr />
         <dl class="dl-horizontal sidepage-content">
             <dt>
