--- a/MyYouthFutures/Views/List_Item/Create.cshtml
+++ b/MyYouthFutures/Views/List_Item/Create.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage create">
     <h2>Create</h2>
 
-    <h4>List of Needs</h4> <!--List Item-->
+    <h4>List: New Item</h4> <!--List Item-->
     <hr />
     <div class="row sidepage-content">
         <div class="col-xs-12">
