--- a/MyYouthFutures/Views/List_Item/Delete.cshtml
+++ b/MyYouthFutures/Views/List_Item/Delete.cshtml
@@ -7,7 +7,7 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>List Item</h4>
+    <h4>List: Item #@Model.ID</h4>
     <hr />
 
     <div class="sidepage-content">
