--- a/MyYouthFutures/Views/Media/Delete.cshtml
+++ b/MyYouthFutures/Views/Media/Delete.cshtml
@@ -6,7 +6,7 @@
 <div class="sidepage delete">
     <h2>Delete</h2>
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Media</h4>
+    <h4>Media: Content #@Model.ID</h4>
     <hr />
     
     <div class="sidepage-content">    
