--- a/MyYouthFutures/Views/Services_Message/Delete.cshtml
+++ b/MyYouthFutures/Views/Services_Message/Delete.cshtml
@@ -7,7 +7,7 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Services Message</h4>
+    <h4>Services: Panel #@Model.ID</h4>
     <hr />
     <div class="sidepage-content">    
         <dl class="dl-horizontal">
