--- a/MyYouthFutures/Views/Staff_Panel/Delete.cshtml
+++ b/MyYouthFutures/Views/Staff_Panel/Delete.cshtml
@@ -7,7 +7,16 @@
     <h2>Delete</h2>
 
     <h3>Are you sure you want to delete this?</h3>
-    <h4>Staff Panel</h4>
+    @{
+        if (Model.Director.Equals("1"))
+        {
+            <h4>Directors: Panel #@Model.ID</h4>
+        }
+        else
+        {
+            <h4>Staff: Panel #@Model.ID</h4>
+        }
+    }
     <hr />
     
     <div class="sidepage-content">    
